<resources>
    <string name="app_name">helongjie</string>
    <string name="helongjie">HeLongjie</string>
    <string name="user">用户:</string>
    <string name="user_label">请输入用户名</string>
    <string name="password">密码:</string>
    <string name="password_label">请输入密码</string>
    <string name="denglu">登录</string>
    <string name="tuichu">退出登陆</string>
    <string name="zhuce">注册</string>
    <string name="zhuye">主页</string>
    <string name="esc">返回</string>
    <string name="passw1">确认密码:</string>
    <string name="todo">TODO</string>
    <string name="pwd">密码必须由字母和数字至少8位组成</string>
    <string name="use">用户名和密码不能为空</string>
    <string name="mandm">密码和确认密码不匹配</string>
    <string name="mm">用户名或密码错误</string>
    <string name="zhaobudao">找不到该用户，请注册</string>
    <string name="userno">用户已存在</string>
    <string name="zuozi">桌子</string>
    <string name="_1000">1000</string>
    <string name="shopping">购物商城</string>
    <string name="welcome">欢迎使用</string>
    <string name="musiclsit">音乐列表</string>
    <string name="time">时间</string>
    <string name="gequ">歌曲名称</string>
    <string name="maohao">:</string>
    <string name="music_title">晴天</string>
    <string name="guangdie">光碟</string>
    <string name="total">04:14</string>
    <string name="play">播放</string>
    <string name="stop">暂停</string>
    <string name="con">继续</string>
    <string name="exit">终止</string>
    <string name="una">尊敬的 </string>
    <string name="zz">正在播放: </string>
</resources>