<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_music_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/music_title"
        android:textSize="24sp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music_title"
        android:textSize="24sp"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/iv_music"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:src="@drawable/music"
        android:contentDescription="@string/guangdie" />

    <SeekBar
        android:id="@+id/sb"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="50dp">

        <TextView
            android:id="@+id/tv_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/time"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/total"
            android:gravity="right"
            android:paddingEnd="20dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/btn_play"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/play"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn_pause"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/stop"
            android:textSize="18sp"/>


        <Button
            android:id="@+id/btn_continue_play"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/con"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/btn_exit"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/exit"
            android:textSize="18sp"/>

    </LinearLayout>


</LinearLayout>