<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login"
    android:background="#eee"
    android:padding="12dp">
    <ImageView
        android:id="@+id/touxiang"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/touxiang"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/account_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/touxiang"
        android:layout_marginStart="60dp"
        android:text="@string/user"
        android:textColor="#000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/touxiang"
        android:layout_marginStart="120dp"
        android:minHeight="48dp"
        android:hint="@string/user_label"
        android:autofillHints=""
       />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginStart="60dp"
        android:text="@string/password"
        android:textColor="#000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:hint="@string/password_label"
        android:layout_marginStart="120dp"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:autofillHints=""
    />


    <Button
        android:layout_width="200dp"
        android:id="@+id/button"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:background="#8f8f"
        android:text="@string/denglu"
        android:textSize="25sp" />
    <Button
        android:layout_width="200dp"
        android:id="@+id/zhuce"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerInParent="true"
        android:layout_marginTop="105dp"
        android:background="#8f8f"
        android:text="@string/zhuce"
        android:textSize="25sp" />
</RelativeLayout>